--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="superinfo">
             <p>Seg / Sex - 08:00 às 18:00</p>
             <a href="tel:5514999999999">+55 14 99999-9999</a>
-            <p>Av. Ali Perto, 330, Botafogo - RJ</p>
+            <p>Av. Ali Perto, 330, Bauru - SP</p>
         </div>
     </div>
     
